# AI_Mega_2026_Ivan

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  Justfile  README.md  pyproject.toml  repomix-output.txt
docs/: baseline.md
docs/examples/: hallucination.md  off_topic.md  role_reversal.md  skills_delta.md
examples/scenarios/: sample.json
prompts/: expert_analyst_system.md  expert_designer_system.md  expert_qa_system.md  expert_team_lead_system.md  expert_tech_lead_system.md  interviewer_system.md  observer_system.md  planner_system.md  report_writer_system.md
src/interview_coach/: __init__.py  agents.py  cli.py  graph.py  logger.py  models.py  prompts.py  scenarios.py  settings.py  skills.py
src/interview_coach/nodes/: __init__.py  difficulty.py  experts.py  interviewer.py  observer.py  planner.py  report.py  router.py
tests/: test_cli_runner.py  test_graph_flow.py  test_log_schema.py  test_logger_format.py  test_scenario_smoke.py  test_structured_outputs.py
